Refactoring and extended functionallity