@@ -1,5 +1,7 @@
 package de.innovationhub.prox.companyprofileservice.domain.company;
 
+import java.util.Arrays;
+import java.util.HashSet;
 import java.util.Set;
 import lombok.Getter;
 
@@ -14,6 +16,7 @@ public class BranchSampleData {
     this.SAMPLE_BRANCH_1 = new Branch("A");
     this.SAMPLE_BRANCH_2 = new Branch("B");
     this.SAMPLE_BRANCH_3 = new Branch("C");
-    this.SAMPLE_BRANCHES = Set.of(SAMPLE_BRANCH_1, SAMPLE_BRANCH_2, SAMPLE_BRANCH_3);
+    this.SAMPLE_BRANCHES =
+        new HashSet<>(Arrays.asList(SAMPLE_BRANCH_1, SAMPLE_BRANCH_2, SAMPLE_BRANCH_3));
   }
 }
