@@ -1,5 +1,7 @@
-package de.innovationhub.prox.companyprofileservice.domain.company;
+package de.innovationhub.prox.companyprofileservice.domain.company.quarter;
 
+import java.util.Arrays;
+import java.util.HashSet;
 import java.util.Set;
 import lombok.Getter;
 
@@ -14,6 +16,7 @@ public class QuarterSampleData {
     this.SAMPLE_QUARTER_1 = new Quarter("Germany");
     this.SAMPLE_QUARTER_2 = new Quarter("England");
     this.SAMPLE_QUARTER_3 = new Quarter("Russia");
-    this.SAMPLE_QUARTERS = Set.of(SAMPLE_QUARTER_1, SAMPLE_QUARTER_2, SAMPLE_QUARTER_3);
+    this.SAMPLE_QUARTERS =
+        new HashSet<>(Arrays.asList(SAMPLE_QUARTER_1, SAMPLE_QUARTER_2, SAMPLE_QUARTER_3));
   }
 }
